Alterando rotas de imagens para ghpages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="logo">
-      <img src="/assets/logo.png" alt="logo" class="logo" />
+      <img src="assets/logo.png" alt="logo" class="logo" />
       <div class="name">
         <h1 class="nameLogo">Aguiar</h1>
         <p>Clínica Odontológica</p>
@@ -29,7 +29,7 @@
     <a class="schedule" href="https://wa.me/5561999999999" target="_blank">
       <p>Agende sua consulta online!</p>
       <img
-        src="/assets/whatsapp_original.png"
+        src="assets/whatsapp_original.png"
         alt="wppLogoSchedule"
         class="wppLogoSchedule"
       />
@@ -117,15 +117,15 @@
 
     <section class="social">
       <a href="https://wa.me/5561999999999" target="_blank"
-        ><img src="/assets/whatsapp_color.png" alt="wpp" class="social"
+        ><img src="assets/whatsapp_color.png" alt="wpp" class="social"
       /></a>
       <a href="https://www.instagram.com/#" target="_blank"
-        ><img src="/assets/instagram.png" alt="ig" class="social"
+        ><img src="assets/instagram.png" alt="ig" class="social"
       /></a>
       <a
         href="https://web.facebook.com/?locale=pt_BR&_rdc=1&_rdr#"
         target="_blank"
-        ><img src="/assets/facebook.png" alt="fb" class="social"
+        ><img src="assets/facebook.png" alt="fb" class="social"
       /></a>
     </section>
   </body>
